<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layoutPadding">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogElemVerticalMargins"
        android:layout_marginBottom="@dimen/dialogElemVerticalMargins"
        android:text="@string/infoTitleUploadVideo"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sectionSeparator"
        android:layout_marginTop="@dimen/dialogElemVerticalMargins"
        android:layout_marginBottom="@dimen/dialogElemVerticalMargins"
        android:background="@color/sectionSeparator"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogElemVerticalMargins"
        android:layout_marginBottom="@dimen/dialogElemVerticalMargins"
        android:text="@string/step1"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogElemVerticalMargins"
        android:layout_marginBottom="@dimen/dialogElemVerticalMargins"
        android:text="@string/step2"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogElemVerticalMargins"
        android:layout_marginBottom="@dimen/dialogElemVerticalMargins"
        android:text="@string/step3"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogElemVerticalMargins"
        android:layout_marginBottom="@dimen/dialogElemVerticalMargins"
        android:text="@string/step4"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogElemVerticalMargins"
        android:layout_marginBottom="@dimen/dialogElemVerticalMargins"
        android:text="@string/step5"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"/>


</LinearLayout>