<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.intel.signapp.ForumActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forumButton"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/makeQuestButton"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardViewMargin"
        android:hint="@string/makeQuestHint"/>
    <Button
        android:id="@+id/buttonSendQuest"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/buttonMargin"
        android:text="@string/makeQuestButton"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextSize"
        android:background="@color/colorPrimary"
        android:onClick="sendQuest"/>


    <TextView
        android:id="@+id/myQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>
    <GridLayout
        android:id="@+id/gridLayoutOthersQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:text="@string/resp"
            android:textSize="@dimen/titleSize"
            android:textColor="@color/textColor"
            android:textStyle="bold"/>
        <ImageButton android:layout_width="28dp"
            android:layout_height="34dp"
            android:src="@drawable/info_icon_blue_3d"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimary"
            android:onClick="uploadVideoPopUp"/>
    </GridLayout>


    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/buttonMargin"
        android:text="@string/logOutButton"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextSize"
        android:background="@color/colorPrimary"
        android:onClick="logout"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
