<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.intel.signapp.LoginActivity"
    android:padding="@dimen/layoutPadding">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textColor="@color/textColor"
            />

        <EditText
            android:id="@+id/userLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwd"
            android:textColor="@color/textColor"
            />

        <EditText
            android:id="@+id/passwdLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwd"
            />
    </GridLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">
        <Button
        android:id="@+id/buttonLogin"
        android:layout_width="@dimen/loginForumButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/buttonMargin"
        android:text="@string/loginButton"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextSize"
        android:background="@color/colorPrimary"
        android:onClick="login"/>

        <CheckBox
            android:id="@+id/checkBoxRemindLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rememberMe"
            android:textSize="@dimen/textSize"
            android:textColor="@color/textColor"/>
    </GridLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="@dimen/loginForumButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/buttonMargin"
        android:background="@color/colorPrimary"
        android:text="@string/registerButton"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/buttonTextSize"
        android:onClick="toRegister"/>

</LinearLayout>
